Fixed AVH hub issue with inst logo being too wide on record page.
git-svn-id: http://ala-hubs.googlecode.com/svn/trunk/hubs-webapp@917 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/avh2012/widget.css
+++ b/src/main/webapp/css/avh2012/widget.css
@@ -5,16 +5,21 @@
 #SidebarBox {
     float: left;
 }
+
 #SidebarBox .sidebar {
-    width: 240px;
+    width: 270px;
     margin: 0;
     padding-left: 30px;
 }
 
+#SidebarBox #institutionLogo {
+    max-width: 250px;
+}
+
 #contentBox #content2 {
     float: left;
-    margin-left: 0px;
-    width: 720px;
+    margin-left: 8px;
+    width: 690px;
 }
 
 .sidebar li {
